# vibeagent

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: actions.ts  agent.ts  cli.ts  minimax.ts  prompts.ts  types.ts  workspace.ts
src/vibeagent.egg-info/: SOURCES.txt
test/: actions.test.ts  agent.test.ts  workspace.test.ts
tests/: test_actions.py  test_agent.py  test_chat.py  test_cli.py  test_commands.py  test_config.py  test_minimax.py  test_openai_compat.py  test_providers.py  test_session.py  test_workspace.py
vibeagent/: __init__.py  __main__.py  actions.py  agent.py  chat.py  cli.py  commands.py  config.py  minimax.py  openai_compat.py  prompts.py  providers.py  session.py  types.py  workspace.py
vibeagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
